src/test/deca/syntax/invalid/while4.deca
//Description
//    Vérifier le while
//
//Résultats :
//    Erreur Syntaxique ligne 9
//

{
while(protected int a){{}}
}
